# my_agent_app

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/my_agent_app/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: zeroclaw.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  zeroclaw.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_my_agent_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_my_agent_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
